// backend/module/auth/proto/authPb.proto
syntax = "proto3";

package auth;
option go_package = "github.com/HLLC-MFU/HLLC-2025/backend/module/auth/proto";

message LoginRequest {
    string username = 1;  // Student ID
    string password = 2;
}

message LoginResponse {
    string access_token = 1;
    string refresh_token = 2;
    UserInfo user = 3;
}

message RefreshTokenRequest {
    string refresh_token = 1;
}

message RefreshTokenResponse {
    string access_token = 1;
    string refresh_token = 2;
    int64 expires_at = 3;
}

message ValidateTokenRequest {
    string token = 1;
}

message ValidateTokenResponse {
    bool valid = 1;
    UserInfo user = 2;
}

message UserInfo {
    string id = 1;
    string username = 2;
    repeated string roles = 3;
    string first_name = 4;
    string middle_name = 5;
    string last_name = 6;
}

service AuthService {
    rpc Login(LoginRequest) returns (LoginResponse);
    rpc RefreshToken(RefreshTokenRequest) returns (RefreshTokenResponse);
    rpc ValidateToken(ValidateTokenRequest) returns (ValidateTokenResponse);
}